react-app/src/index.css
/* ... */
.sidenav a {
  color: var(--tradera-white);
  font-size: var(--tradera-font-medium);
  font-weight: 300;
  text-decoration: none;
  padding: 14px 21px 14px 21px;
  display: flex;
  align-items: center;
}

.sidenav a i {
  margin-right: 10px;
}

.sidenav a:hover {
  color: var(--tradera-white);
  /* font-weight: 700; */
}

.sidenav #mainLogo {
  margin-top: 28.86px;
  margin-bottom: 26.86px;
}

img, svg {
  vertical-align: unset !important;
}

.sidenav .nav-link.active {
  background: linear-gradient(to bottom, #2D2C34, #151419);
  border: 1px solid var(--tradera-border);
  border-radius: var(--tradera--border-radius);
  color: var(--tradera-blue-light);
}

.sidenav .nav-link:hover {
  background: var(--tradera-grey);
  border-radius: var(--tradera--border-radius);
  cursor: pointer;
  color: white;
}

.sidenav .nav-link {
  color: var(--tradera-grey-light);
  border: 1px solid transparent;
}

.usercontainder {
  background: linear-gradient(to bottom, #2D2C34, #151419);
  border: 1px solid var(--tradera-border);
  border-radius: var(--tradera--border-radius-profile);
  padding: 11px;
  display: flex;
  align-items: center;
}

.usercontainder #profileLogo {
  width: 38px;
  height: 38px;
  border-radius: 50%;
  margin-right: 13px;
  border: 1px solid #3D3C42;
}

.usercontainder-info {
  display: flex;
  flex-direction: column;
}

.usercontainder-username {
  color: var(--tradera-white);
  font-size: var(--tradera-font-medium);
  font-weight: 700;
  line-height: 21.94px;
}

.usercontainder-usertype {
  color: var(--tradera-grey-light);
  font-size: var(--tradera-font-small);
  font-weight: 400;
  line-height: 14.63px;
}

/* =========== Background styling for pages =========== */
.page-background {
  /* width: 100%; */
  height: calc(100vh - 40px);
  background-color: var(--tradera-grey);
  border-radius: var(--tradera--border-radius);
  padding: 20px;
  margin-top: 20px;
}

/* =========== Dashboard layout =========== */
.container {
  display: flex;
  height: 100%;
}

.row {
  display: flex;
  flex: 1;
}

.left-column {
  flex: 1;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border-radius: var(--tradera--border-radius);
  margin-right: 10px;
}

.left-column-large {
  flex: 2;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border-radius: var(--tradera--border-radius);
  margin-right: 10px;
}

.dashboard-balance-card {
  flex: 1;
  background: linear-gradient(to bottom right, var(--tradera-blue-light), var(--tradera-blue-dark));
  padding: 20px;
  border-radius: var(--tradera--border-radius);
  margin-bottom: 10px;
}

.left-bottom-row {
  flex: 2;
  background-color: var(--tradera-purple-light);
  padding: 20px;
  border-radius: var(--tradera--border-radius);
}

.right-column {
  flex: 2;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border-radius: var(--tradera--border-radius);
}

.right-column-small {
  flex: 1;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border-radius: var(--tradera--border-radius);
}

.dasboard-status-chart {
  border: 1px solid var(--tradera-border);
  border-radius: var(--tradera--border-radius);
  margin-bottom: 10px;
  /* padding: 0 20px; */
}

.bottom-row {
  display: flex;
  width: 100%;
}

.column-wrapper,
.bottom-right-wrapper {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin-right: 10px;
}

.column-title {
  text-align: left;
  margin-bottom: 20px;
  background-color: var(--tradera-grey);
  border-radius: var(--tradera--border-radius);
}

.column-title .spesific {
  color: var(--tradera-grey-light);
}

.column-title .transactions {
  color: var(--tradera-white);
  font-weight: 600;
}

.bottom-left-column {
  margin-right: 10px;
}

.dashboard-transactions-chart {
  flex: 1;
  display: flex;
  flex-direction: column;
  border-radius: var(--tradera--border-radius);
  border: 1px solid var(--tradera-border);
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.border-container {
  border-radius: var(--tradera--border-radius);
  border: 1px solid var(--tradera-border);
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.admin-left-container {
  display: flex;
  height: 100%;
  align-items: center;
  border-radius: var(--tradera--border-radius);
  border: 1px solid var(--tradera-border);
}

.card-container div {
  display: flex;
  align-items: center;
}

.card #cardLogo {
  width: 39px;
}

.cardbalance {
  color: var(--tradera-grey);
  font-size: var(--tradera-font-xxlarge);
  font-weight: 700;
  line-height: 21.94px;
  margin-left: 20px;
}

.cardnumber {
  color: var(--tradera-grey);
  font-size: var(--tradera-font-xlarge);
  font-weight: 700;
  line-height: 21.94px;
  margin-top: 20px;
}

.expiresdatecontainder {
  margin-top: 18px;
}

.expire-text,
.expire-data {
  margin: 0;
  padding: 0;
}

.expire-text {
  color: var(--tradera-grey);
  font-size: var(--tradera-font-medium);
  font-weight: 400;
}

.expire-data {
  color: var(--tradera-grey);
  font-size: var(--tradera-font-xlarge);
  font-weight: 400;
}

.account-status {
  color: var(--tradera-grey-light);
  font-size: var(--tradera-font-large);
  margin-bottom: 0;
}

.account-status span.active {
  color: var(--tradera-yellow);
  font-weight: 600;
}

.account-status span.frozen {
  color: var(--tradera-red);
  font-weight: 600;
}

.transactions-row {
  display: flex;
  flex: 1;
  border: 1px solid var(--tradera-border);
  border-radius: var(--tradera--border-radius);
  margin-bottom: 14px;
  padding-left: 10px;
  padding-right: 10px;
  align-items: center; /* Vertically centers content within the row */
}

.transactionsLogo {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  object-fit: cover;
  margin-right: 15px;
}

.transactions-info {
  display: flex;
  flex-direction: column;
  margin-left: 13px;
}

.transactions-name {
  font-size: var(--tradera-font-medium);
  font-weight: 700;
  line-height: 21.94px;
}
/* ... */

